--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -31,3 +31,13 @@
     left: 19px;
     bottom: 14px;
 }
+
+.nav__red-dot {
+    background-color: tomato;
+    display: block;
+    height: 7px;
+    width: 7px;
+    border-radius: 3.5px;
+    position: absolute;
+    right: -5px;
+}
