--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -37,3 +37,23 @@
     color:inherit;
     font-size: 13px;
 }
+
+
+.welcome-header {
+    margin: 90px 0px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+}
+
+.welcome-header__title {
+    margin-bottom: 40px;
+    font-size: 25px;
+}
+
+.welcome-header__text {
+    width: 60%;
+    opacity: 0.7;
+}
