--- a/css/styles.css
+++ b/css/styles.css
@@ -4,30 +4,15 @@
 /* components*/
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
 
 /* screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 
 body {
+    color: #2e363e;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.welcome-header {
-    margin: 90px 0px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-weight: bold;
-}
-
-.welcome-header__title {
-    margin-bottom: 40px;
-    font-size: 25px;
-}
-
-.welcome-header__text {
-    width: 60%;
-    opacity: 0.7;
 }
