--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -34,3 +34,7 @@
 .status-bar__column .fa-battery-three-quarters {
     margin: 0px 5px;
 }
+
+.status-bar__column .fa-battery-full {
+    margin: 0px 5px;
+}
