--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 @import "variables.css";
 
 /* components*/
+@import "components/badge.css";
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
@@ -10,9 +11,15 @@
 /* screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 
 body {
     color: #2e363e;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.main-screen {
+    padding: 0px var(--horizontal-space);
+}
+
