--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -37,6 +37,8 @@
 .open-chat__header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 5px;
+    font-size: 14px;
 }
 
 .open-chat__header span:first-child {
@@ -45,4 +47,80 @@
 
 .open-chat__header span:nth-child(2) {
     color: rgba(0, 0, 0, 0.3);
+}
+
+.open-post {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 0;
+    border-bottom: var(--vague-border);
+}
+
+
+.open-post__title {
+    font-weight: 700;
+    margin-bottom: 7px;
+}
+
+.open-post__hashtags {
+    opacity: 0.5;
+    margin-bottom: 7px;
+}
+
+.open-post__members {
+    display: flex;
+    align-items: center;
+}
+
+.open-post__members img {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.open-post__member-count {
+    opacity: 0.5;
+    font-size: 15px;
+  }
+
+  .open-post__members .divider {
+    width: 2px;
+    height: 15px;
+    margin: 0 5px;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+.open-post__member-status {
+    font-size: 15px;
+    color: #fd4ab6;
+}
+
+.open-post__photo {
+    position: relative;
+}
+
+.open-post__photo img {
+    height: 100px;
+    width: 100px;
+    border-radius: 10%;
+}
+
+.open-post__heart-count {
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    padding: 5px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
+
+.open-post__heart-count i {
+    margin-right: 5px;
 }
