--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -1,6 +1,7 @@
 .screen-header {
     display: flex;
     justify-content: space-between;
+    align-items: center ;
     padding: 0 25px;
     margin-top: 50px;
     margin-bottom: 30px;
@@ -29,4 +30,12 @@
     position: absolute;
     top: 50px;
     right: 18px;
+}
+
+.screen-header__icon i {
+    font-size: 25px;
+}
+
+.screen-header__icon i:nth-child(2) {
+    margin-left: 10px;
 }
