--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,8 +3,8 @@
     justify-content: space-between;
     align-items: center ;
     padding: 0 25px;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 .screen-header__title {
