--- a/css/screens/chat-screen.css
+++ b/css/screens/chat-screen.css
@@ -26,9 +26,8 @@
 }
 
 .chat-header__column:nth-child(2) {
-    text-align: center;
+  text-align: center;
 }
-
 .chat-header__column:last-child {
     text-align: end;
 }
@@ -55,6 +54,7 @@
 .message-row {
   width: 100%;
   display: flex;
+  margin-bottom: 25px;
 }
 
 .message-row img {
@@ -87,4 +87,118 @@
 .message__author {
   opacity: 0.8;
   font-size: 14px;
+}
+
+.message-row--own {
+  justify-content: flex-end;
+}
+.message-row--own .message__bubble {
+  border-radius: 15px;
+  border-top-right-radius: 0px;
+  background-color: var(--yellow);
+  margin-left: 5px;
+}
+
+.message-row--own .message__info {
+  flex-direction: row-reverse;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.reply {
+  position: fixed;
+  box-sizing: border-box;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 5px 25px;
+}
+
+.reply__column {
+  height: 40px;
+}
+
+.reply .reply__column:first-child {
+  width: 7%;
+  display: flex;
+  align-items: center;
+}
+
+.reply .reply__column:last-child {
+  width: 93%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reply input {
+  width: 100%;
+  height: 90%;
+  border-radius: 20px;
+  border: var(--vague-border);
+  font-size: 17px;
+  padding-left: 10px;
+}
+
+.reply__column {
+  position: relative;
+}
+
+.reply i {
+  font-size: 30px;
+}
+
+.reply__column:nth-child(2) > i, 
+.reply__column:nth-child(2) button {
+  position: absolute;
+}
+
+.reply__column:nth-child(2) button {
+  right: 3px;
+  top: 4px;
+}
+
+.reply__column:nth-child(2) > i {
+  right: 50px;
+  top: 18px;
+  font-size: 25px;
+}
+
+.reply__column:nth-child(2) button {
+  border-radius: 50%;
+  border: none ;
+  background-color: var(--yellow);
 }
