--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -22,3 +22,28 @@
     border-top: var(--vague-border);
     color: rgba(0, 0, 0, 0.5);
 }
+
+@keyframes hideSPlash {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+
+#splash-screen {
+    position: absolute;
+    top: 0;
+    background-color: var(--yellow);
+    height: 100vh;
+    width: 100vw;
+    font-size: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: hideSPlash 0.4s ease-in-out forwards;
+    animation-delay: 2s;
+}
