--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -16,10 +16,23 @@
     position: relative;
 }
 
+@keyframes notificationANImation {
+    0% {
+        transform: none;
+    }
+    50% {
+        transform: translateY(-5px) rotateY(90deg);
+    }
+    100% {
+        transform: none;
+    }
+}
+
 .nav__notification {
     position: absolute;
     left: 19px;
     bottom: 14px;
+    animation: notificationANImation 1s ease-in-out infinite;
 }
 
 .nav__red-dot {
@@ -30,4 +43,29 @@
     border-radius: 3.5px;
     position: absolute;
     right: -5px;
+}
+
+@keyframes ShowButtons {
+ from {
+ }   
+ to {
+    transform: none;
+    opacity: 1;
+ }
+}
+
+.nav__btn {
+    transform: translateY(50px);
+    opacity: 0;
+    animation: ShowButtons 0.4s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.nav__btn:nth-child(4) {
+    animation-delay: 0.9s;
 }
