--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -39,3 +39,13 @@
 .screen-header__icon i:nth-child(2) {
     margin-left: 18px;
 }
+
+@keyframes spincog {
+    from {}
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+.screen-header .fa-cog:hover {
+    animation: spincog 1s linear infinite;
+}
