--- a/css/screens/chat-screen.css
+++ b/css/screens/chat-screen.css
@@ -147,10 +147,6 @@
   padding: 5px 25px;
 }
 
-.reply__column {
-  height: 40px;
-}
-
 .reply .reply__column:first-child {
   width: 7%;
   display: flex;
@@ -159,46 +155,103 @@
 
 .reply .reply__column:last-child {
   width: 93%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
 }
 
 .reply input {
+  padding: 14px;
   width: 100%;
-  height: 90%;
-  border-radius: 20px;
+  border-radius: 25px;
   border: var(--vague-border);
+  box-sizing: border-box;
   font-size: 17px;
-  padding-left: 10px;
-}
-
-.reply__column {
-  position: relative;
 }
 
 .reply i {
   font-size: 30px;
+  opacity: 0.5;
 }
 
-.reply__column:nth-child(2) > i, 
-.reply__column:nth-child(2) button {
+.reply__column:last-child > i, 
+.reply__column:last-child button {
   position: absolute;
 }
 
-.reply__column:nth-child(2) button {
-  right: 3px;
-  top: 4px;
+.reply__column:last-child button {
+  right: 8px;
+  top: 9px;
 }
 
-.reply__column:nth-child(2) > i {
+.reply__column:last-child > i {
   right: 50px;
-  top: 18px;
+  top: 25px;
   font-size: 25px;
 }
 
-.reply__column:nth-child(2) button {
+.reply__column:last-child button {
   border-radius: 50%;
   border: none ;
   background-color: var(--yellow);
+}
+
+
+
+
+
+
+
+@keyframes FadeIn {
+  from {
+      opacity: 0;
+      transform: translateX(-60px);
+  }
+  to {
+      opacity: 1;
+      transform: none
+  }
+}
+@keyframes FadeIn-own {
+  from {
+      opacity: 0;
+      transform: translateX(60px);
+  }
+  to {
+      opacity: 1;
+      transform: none
+  }
+}
+.message-row {
+  animation: FadeIn 1s ease-in-out forwards;
+}
+.message-row--own {
+  animation: FadeIn-own 1s ease-in-out forwards;
+}
+
+
+
+
+
+
+.reply,
+.reply input {
+  transition: all 0.7s ease-in-out;
+}
+.reply__column > i,
+.reply button {
+  transition: all 0.7s ease-in-out ;
+}
+
+.reply:focus-within .reply__column > i,
+.reply:focus-within button {
+  opacity: 0;
+  transform: translateY(-80px);
+}
+
+.reply:focus-within {
+  transform: translateY(80px);
+}
+
+.reply:focus-within input {
+  transform: translateY(-80px) translateX(-10%);
+  width: 94vw;
 }
