--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,14 @@ body {
 }
 
 #media-query {
+    width: 100%;
+    height: 100%;
+    font-size: 40px;
     visibility: hidden;
 }
 @media screen and (min-width: 560px) {
     #media-query {
+        visibility: visible;
         background-color: var(--yellow);
     }
 }
