--- a/css/styles.css
+++ b/css/styles.css
@@ -27,14 +27,16 @@ body {
 }
 
 #media-query {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--yellow);
     font-size: 40px;
-    visibility: hidden;
 }
-@media screen and (min-width: 560px) {
+@media screen and (max-width: 560px) {
     #media-query {
-        visibility: visible;
-        background-color: var(--yellow);
+        background-color: none;
+        width: 0px;
+        height: 0px;
+        color: rgba(0, 0, 0, 0);
     }
 }
