--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
     padding: 0px var(--horizontal-space);
 }
 
-#media-query {
+#original-name {
     z-index: 5;
     width: 100vw;
     height: 100vh;
@@ -37,7 +37,7 @@ body {
     align-items: center;
 }
 @media screen and (max-width: 560px) {
-    #media-query {
+    #original-name {
         background-color: rgba(0, 0, 0, 0);
         width: 0px;
         height: 0px;
