--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,9 @@ body {
 }
 
 #original-name {
-    z-index: 5;
+    position: absolute;
+    top: 0;
+    z-index: 500;
     width: 100vw;
     height: 100vh;
     background-color: var(--yellow);
