--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@
 body {
     color: #2e363e;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
 }
 
 .main-screen {
